# stock-assistant

./: .env.example  .gitignore  README.md  actual_task  docker-compose.prod.yaml  docker-compose.yaml
backend/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  załozenia.txt
backend/app/: app.py  auth.py  config.py  container.py  dependencies.py
backend/app/agents/: context.py  financial_agent.py  tool_metrics.py
backend/app/errors/: __init__.py  exceptions.py  handlers.py  mapping.py
backend/app/events/: conversation_event_bus.py
backend/app/graphs/: intent_router.py  stock_assistant_graph.py  topic_source_map.py
backend/app/memory/: conversation_context.py  conversation_memory.py  keys.py  message_buffer.py  redis_client.py  summary_cache.py
backend/app/models/: api.py  auth.py  chat_message.py  error.py  routing.py
backend/app/routes/: api_routes.py  auth_routes.py  conversation_routes.py  healthy_check.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  injection_gate_service.py  llm_router_service.py  stock_assistant.py  (+1 more)
backend/tests/: conftest.py  test_api_http.py  test_auth_service.py  test_conversation_context.py  test_conversation_list.py  test_conversation_memory.py  test_conversation_memory_pii.py  test_conversation_messages.py  test_health_check.py  test_intent_router.py  test_mcp_tools.py  test_message_buffer.py  test_pagination.py  test_pii_detector.py  test_source_filter.py  test_stock_assistant_graph.py  test_summarization_service.py  test_summary_cache.py  test_tool_metrics.py  test_topic_source_map.py
(+125 files in other folders)
